--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Arslan Behleem — Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="description" content="Portfolio of Arslan Behleem — Video Editor, Freelancer & Technician">
+    <meta name="description" content="Arslan Behleem — Video Editor & Entrepreneur">
     <meta name="author" content="Arslan Behleem">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#0B1020">
@@ -25,7 +25,7 @@
 
     <!-- Open Graph (Social Sharing) -->
     <meta property="og:title" content="Arslan Behleem — Video Editor">
-    <meta property="og:description" content="Portfolio of Arslan Behleem — Video Editor & Freelancer">
+    <meta property="og:description" content="Arslan Behleem — Video Editor & Entrepreneur">
     <meta property="og:image" content="https://arslanbehleem.github.io/images/social-preview.png">
     <meta property="og:url" content="https://arslanbehleem.github.io/">
     <meta property="og:type" content="website">
