--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                         <button class="arslanbehleem-pagebtn" id="arslanbehleem-prev">⟵ Prev</button>
                         <span id="arslanbehleem-pageinfo" style="opacity:.8; font-size:14px;">Page 1</span>
                         <button class="arslanbehleem-pagebtn" id="arslanbehleem-next">Next ⟶</button>
+                        <span id="aria-pagination" style="display:none;"></span>
                     </div>
                 </div>
             </div>
@@ -299,7 +300,7 @@
         </footer>
         <!-- Floating CTA -->
         <!--
-          <div class="arslanbehleem-fab"><a class="arslanbehleem-btn arslanbehleem-btn--primary" target="_blank" rel="noreferrer" href="https://www.upwork.com/freelancers/~01bf62ebf9739d91fc">Hire me</a></div> -->
+          <div class="arslanbehleem-fab"><a class="arslanbehleem-btn arslanbehleem-btn--primary" target="_blank" rel="noreferrer" href="https://www.upwork.com/">Hire me</a></div> -->
 
         <!-- LIGHTBOX ROOT -->
         <div class="arslanbehleem-lightbox" id="arslanbehleem-lightbox" aria-modal="true" role="dialog" aria-label="Video popup">
@@ -312,9 +313,6 @@
         <!-- ============ SCRIPTS ============ -->
         <script src="scripts/core.js" defer></script>
     </section>
-    </div>
-    </div>
-    </div>
 </body>
 
 </html>
