--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Open Graph (Social Sharing) -->
-    <meta property="og:title" content="Arslan Behleem — Video Editor">
-    <meta property="og:description" content="Arslan Behleem — Video Editor & Entrepreneur">
-    <meta property="og:image" content="https://arslanbehleem.github.io/images/social-preview.png">
+    <meta property="og:title" content="Arslan Behleem">
+    <meta property="og:description" content="Freelance Video Editor & Entrepreneur">
     <meta property="og:url" content="https://arslanbehleem.github.io/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
@@ -49,8 +48,8 @@
                     <a class="arslanbehleem-btn" href="#arslanbehleem-services">Services</a>
                     <a class="arslanbehleem-btn" href="#arslanbehleem-skills">Skills</a>
                     <a class="arslanbehleem-btn" href="#arslanbehleem-testimonials">Reviews</a>
-                    <a class="arslanbehleem-btn" href="#arslanbehleem-contact">Get in Touch</a>
-                    <!-- <a class="arslanbehleem-btn arslanbehleem-btn--primary" target="_blank" rel="noreferrer" href="https://wa.link/8ils9e">Contact Me</a> -->
+                    <a class="arslanbehleem-btn" href="#arslanbehleem-contact">Contact</a>
+                    <a class="arslanbehleem-btn arslanbehleem-btn--primary" target="_blank" rel="noreferrer" href="https://www.behance.net/ArslanBehleem">Behance</a>
                 </div>
             </div>
         </nav>
@@ -95,7 +94,7 @@
                 </div>
                 <div class="arslanbehleem-reveal">
                     <figure class="arslanbehleem-portrait">
-                        <img decoding="async" src="https://images.pexels.com/photos/24497392/pexels-photo-24497392.jpeg" alt="Portrait of Arslan" style="width:100%; height:auto; display:block;" />
+                        <img decoding="async" src="https://arslanbehleem.github.io/images/arslan-behleem-hero-thumbnail.webp" alt="Portrait of Arslan" style="width:100%; height:auto; display:block;" />
                     </figure>
                 </div>
             </div>
@@ -311,7 +310,7 @@
         </div>
 
         <!-- ============ SCRIPTS ============ -->
-        <script src="scripts/core.js" defer></script>
+        <script src="js/script.js" defer></script>
     </section>
 </body>
 
