--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- Open Graph (Social Sharing) -->
     <meta property="og:title" content="Arslan Behleem">
     <meta property="og:description" content="Freelance Video Editor & Entrepreneur">
+    <meta property="og:image" content="/images/arslan-behleem-preview.jpg">
     <meta property="og:url" content="https://arslanbehleem.github.io/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
@@ -69,7 +70,6 @@
                     </div>
                     <div class="arslanbehleem-trust-row">
                         <span class="arslanbehleem-badge">💎 Senior-Level Quality</span>
-                        <span class="arslanbehleem-badge">⚡ Fast Revisions</span>
                         <span class="arslanbehleem-badge">🤝 Clear Communication</span>
                         <span class="arslanbehleem-badge">💰 Affordable Rates</span>
                     </div>
