--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta charset="UTF-8">
     <title>Arslan Behleem — Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="description" content="Arslan Behleem — Video Editor & Entrepreneur">
-    <meta name="author" content="Arslan Behleem">
+    <meta name="description" content="Freelance video editor helping brands and creators turn raw footage into flawless, high-impact videos through clean editing and storytelling.">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#0B1020">
 
@@ -24,9 +23,9 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Open Graph (Social Sharing) -->
-    <meta property="og:title" content="Arslan Behleem">
-    <meta property="og:description" content="Freelance Video Editor & Entrepreneur">
-    <meta property="og:image" content="/images/arslan-behleem-preview.jpg">
+    <meta property="og:title" content="Arslan Behleem — Professional Video Editor">
+    <meta property="og:description" content="Freelance video editor helping brands and creators turn raw footage into flawless, high-impact videos through clean editing and storytelling.">
+    <meta property="og:image" content="https://arslanbehleem.github.io/images/arslan-behleem-preview.jpg">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
 </head>
@@ -64,8 +63,7 @@
                     <p class="arslanbehleem-sub">I turn raw clips into premium, high-retention YouTube videos, Shorts, Reels, TikToks, ads, and promos.</p>
                     <div class="arslanbehleem-cta-row">
                         <a class="arslanbehleem-btn arslanbehleem-btn--primary" href="#arslanbehleem-work">View Portfolio</a>
-                        <!-- no autoplay in lightbox -->
-                        <a class="arslanbehleem-btn arslanbehleem-lightbox-link" data-embed="youtube" data-src="https://www.youtube.com/embed/gEhZP9j-DI?rel=0&playsinline=1" href="https://youtu.be/gEhZP9j-DI">▶ Watch 30s intro</a>
+                        <a class="arslanbehleem-btn arslanbehleem-lightbox-link" data-embed="youtube" data-src="https://www.youtube.com/embed/XFCgR9nfL8I?rel=0&playsinline=1" href="https://youtu.be/XFCgR9nfL8I">Watch 45s intro</a>
                     </div>
                     <div class="arslanbehleem-trust-row">
                         <span class="arslanbehleem-badge">💎 Senior-Level Quality</span>
@@ -110,10 +108,10 @@
                             <h3 style="margin:0; font-size:20px;">YouTube Editing</h3></div>
                         <p style="opacity:.9; margin-top:10px;">Retention-focused pacing, structure, and packaging.</p>
                         <p class="arslanbehleem-hint">Pain: Viewers drop off early, growth slows.</p>
-                        <p class="arslanbehleem-hint">Solution: Retention-first structure and editing decisions that improve AVD (Average View Duration).</p>
+                        <p class="arslanbehleem-hint">Solution: Editing and structure designed to boost retention and Average View Duration.</p>
                         <div class="arslanbehleem-actions">
                             <a href="#arslanbehleem-work" class="arslanbehleem-btn arslanbehleem-btn--primary">See work</a>
-                            <a href="https://www.upwork.com/freelancers/~01bf62ebf9739d91fc" target="_blank" rel="noreferrer" class="arslanbehleem-btn">Get a quote</a>
+                            <a href="https://wa.link/8ils9e" target="_blank" rel="noreferrer" class="arslanbehleem-btn">Get a quote</a>
                         </div>
                     </article>
                     <article class="arslanbehleem-card arslanbehleem-reveal">
@@ -124,7 +122,7 @@
                         <p class="arslanbehleem-hint">Solution: High-retention, scroll-stopping hooks that boost watch time and engagement.</p>
                         <div class="arslanbehleem-actions">
                             <a href="#arslanbehleem-work" class="arslanbehleem-btn arslanbehleem-btn--primary">See work</a>
-                            <a href="https://www.upwork.com/freelancers/~01bf62ebf9739d91fc" target="_blank" rel="noreferrer" class="arslanbehleem-btn">Get a quote</a>
+                            <a href="https://wa.link/8ils9e" target="_blank" rel="noreferrer" class="arslanbehleem-btn">Get a quote</a>
                         </div>
                     </article>
                     <article class="arslanbehleem-card arslanbehleem-reveal">
@@ -132,10 +130,10 @@
                             <h3 style="margin:0; font-size:20px;">Ads &amp; Promos</h3></div>
                         <p style="opacity:.9; margin-top:10px;">Conversion-focused edits for launches, promos, and brands.</p>
                         <p class="arslanbehleem-hint">Pain: Ad budget wasted on weak creatives.</p>
-                        <p class="arslanbehleem-hint">Solution: Scroll-tested variants, clean branding, and clear messaging.</p>
+                        <p class="arslanbehleem-hint">Solution: Ads designed with psychology, tested creatives, and messaging that converts.</p>
                         <div class="arslanbehleem-actions">
                             <a href="#arslanbehleem-work" class="arslanbehleem-btn arslanbehleem-btn--primary">See work</a>
-                            <a href="https://www.upwork.com/freelancers/~01bf62ebf9739d91fc" target="_blank" rel="noreferrer" class="arslanbehleem-btn">Get a quote</a>
+                            <a href="https://wa.link/8ils9e" target="_blank" rel="noreferrer" class="arslanbehleem-btn">Get a quote</a>
                         </div>
                     </article>
                 </div>
@@ -181,34 +179,24 @@
                         <p class="arslanbehleem-lead">Filter by category and click any card to preview instantly.</p>
                     </div>
 
-                    <!-- Filters — NO "All", default Short-form active -->
                     <div class="arslanbehleem-filters" role="tablist" aria-label="Filters">
                         <button class="arslanbehleem-tab" aria-pressed="true" data-tag="Short-form">
-                            <span class="ico"></span><span>Short-form</span>
-                            <!-- class="ico">🎬</span> -->
+                            <span class="ico">⚡</span><span>Short-form</span>
                         </button>
                         <button class="arslanbehleem-tab" aria-pressed="false" data-tag="Ads">
-                            <span class="ico"></span><span>Ads</span>
-                            <!-- class="ico">📣</span> -->
+                            <span class="ico">🎯</span><span>Ads & Promos</span>
+                        </button>
+                        <button class="arslanbehleem-tab" aria-pressed="false" data-tag="Motion">
+                            <span class="ico">✨</span><span>Motion Graphics</span>
                         </button>
                         <button class="arslanbehleem-tab" aria-pressed="false" data-tag="YouTube">
-                            <span class="ico"></span><span>YouTube</span>
-                            <!-- class="ico">▶</span> -->
-                        </button>
-                        <button class="arslanbehleem-tab" aria-pressed="false" data-tag="Podcasts">
-                            <span class="ico"></span><span>Podcasts</span>
-                            <!-- class="ico">🎙️</span> -->
+                            <span class="ico">🎬</span><span>YouTube</span>
                         </button>
                     </div>
                 </div>
 
-                <!-- Scoped work wrapper (overlay lives here) -->
                 <div class="arslanbehleem-workwrap">
                     <div class="arslanbehleem-workgrid" id="arslanbehleem-workgrid" aria-live="polite"></div>
-
-                    <div class="arslanbehleem-workloading" id="arslanbehleem-workloading" aria-live="polite" aria-label="Loading portfolio">
-                        <div class="inner">Loading portfolio… <span id="arslanbehleem-ldots">·</span></div>
-                    </div>
 
                     <div class="arslanbehleem-pagination">
                         <button class="arslanbehleem-pagebtn" id="arslanbehleem-prev">⟵ Prev</button>
@@ -288,17 +276,15 @@
             <div class="arslanbehleem-container" style="display:flex; align-items:center; justify-content:space-between; gap:14px; flex-wrap:wrap;">
                 <div>© <span id="arslanbehleem-year"></span> Arslan Behleem — Video Editor</div>
                 <div style="display:flex; gap:14px;">
-                    <!--
-        <a class="arslanbehleem-btn" target="_blank" rel="noreferrer" href="">Portfolio</a>
-        <a class="arslanbehleem-btn" target="_blank" rel="noreferrer" href="">Intro Video</a>
-        <a class="arslanbehleem-btn" target="_blank" rel="noreferrer" href="">Upwork</a>
-        -->
+                    <a class="arslanbehleem-btn" target="_blank" rel="noreferrer" href="#arslanbehleem-work">Portfolio</a>
+                    <a class="arslanbehleem-btn" target="_blank" rel="noreferrer" href="https://youtu.be/XFCgR9nfL8I">Intro Video</a>
+                    <a class="arslanbehleem-btn" target="_blank" rel="noreferrer" href="https://www.behance.net/ArslanBehleem">Behance</a>
                 </div>
             </div>
         </footer>
+        
         <!-- Floating CTA -->
-        <!--
-          <div class="arslanbehleem-fab"><a class="arslanbehleem-btn arslanbehleem-btn--primary" target="_blank" rel="noreferrer" href="https://www.upwork.com/">Hire me</a></div> -->
+          <div class="arslanbehleem-fab"><a class="arslanbehleem-btn arslanbehleem-btn--primary" target="_blank" rel="noreferrer" href="https://wa.link/8ils9e">Hire me</a></div>
 
         <!-- LIGHTBOX ROOT -->
         <div class="arslanbehleem-lightbox" id="arslanbehleem-lightbox" aria-modal="true" role="dialog" aria-label="Video popup">
