--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p class="arslanbehleem-sub">I turn raw clips into premium, high-retention YouTube videos, Shorts, Reels, TikToks, ads, and promos.</p>
                     <div class="arslanbehleem-cta-row">
                         <a class="arslanbehleem-btn arslanbehleem-btn--primary" href="#arslanbehleem-work">View Portfolio</a>
-                        <a class="arslanbehleem-btn arslanbehleem-lightbox-link" data-embed="youtube" data-src="https://www.youtube.com/embed/XFCgR9nfL8I?rel=0&playsinline=1" href="https://youtu.be/XFCgR9nfL8I">Watch 45s intro</a>
+                        <a class="arslanbehleem-btn arslanbehleem-lightbox-link" data-embed="youtube" data-src="https://www.youtube.com/embed/_3AxLe3nSpY?rel=0&playsinline=1" href="https://youtu.be/_3AxLe3nSpY">Watch 45s intro</a>
                     </div>
                     <div class="arslanbehleem-trust-row">
                         <span class="arslanbehleem-badge">💎 Senior-Level Quality</span>
@@ -176,7 +176,7 @@
                 <div style="display:flex; align-items:flex-end; justify-content:space-between; gap:14px; flex-wrap:wrap;">
                     <div>
                         <h2>Portfolio</h2>
-                        <p class="arslanbehleem-lead">Filter by category and click any card to preview instantly.</p>
+                        <p class="arslanbehleem-lead">Click a category name to see videos from that category.</p>
                     </div>
 
                     <div class="arslanbehleem-filters" role="tablist" aria-label="Filters">
