--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Open Graph (Social Sharing) -->
-    <meta property="og:title" content="Arslan Behleem — Professional Video Editor">
-    <meta property="og:description" content="Freelance video editor helping brands and creators turn raw footage into flawless, high-impact videos through clean editing and storytelling.">
-    <meta property="og:image" content="https://arslanbehleem.github.io/images/arslan-behleem-preview.jpg">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
+    <meta property="og:title" content="High-Retention Video Editor for YouTube, Shorts, Reels & Ads">
+    <meta property="og:description" content="Freelance video editor helping brands and creators turn raw footage into flawless, high-impact videos through clean editing and storytelling.">
+    <meta property="og:site_name" content="Arslan Behleem"/>
+    <meta property="og:url" content="https://arslanbehleem.github.io/"/>
+    <meta property="og:image" content="https://arslanbehleem.github.io/images/arslan-behleem-preview.jpg">
+    <meta property="og:image:type" content="image/jpeg"/>
+    <meta property="twitter:card" content="summary_large_image"/>
 </head>
 
 
